--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@react-navigation/native": "^6.1.1",
 		"@react-navigation/native-stack": "^6.9.7",
 		"@reduxjs/toolkit": "^1.9.5",
-		"expo": "~47.0.9",
+		"expo": "^48.0.15",
 		"expo-blur": "~12.0.1",
 		"expo-constants": "14.2.1",
 		"expo-dev-client": "2.2.1",
@@ -38,6 +38,7 @@
 		"react-native-screens": "~3.18.0",
 		"react-native-tab-view": "^3.3.4",
 		"react-native-vector-icons": "^9.2.0",
+		"react-query": "^3.39.3",
 		"react-redux": "^8.0.5"
 	},
 	"devDependencies": {
